<resources>
    <string name="app_name" translatable="true">Sask Geo-Memorial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="label_activity_about">Help &amp; Feedback</string>
    <string name="label_activity_map">Map</string>
    <string name="label_activity_favorites">Favorites</string>
    <string name="label_activity_preferences">Settings</string>
    <string name="search_hint">Search Sask Geo-Memorial</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed out</string>
    <string name="about_header">ABOUT</string>
    <string name="about_name_label">Name</string>
    <string name="about_name_value">Sask. Geo-Memorial</string>
    <string name="about_version_label">Version</string>
    <string name="about_version_value" translatable="false">v1.0.10</string>
    <string name="about_date_label">Date</string>
    <string name="about_date_value" translatable="false">2016&#8211;06&#8211;15</string>
    <string name="about_by_label">By</string>
    <string name="about_by_value">Darryl Staflund</string>
    <string name="about_description_1">The Saskatchewan Geo&#8211;Memorial Project is a Government of Saskatchewan initiative that names landmarks after residents who have died in service of Saskatchewan or Canada.  Although the program originally concerned itself with casualties from World War II (1938 &#8211; 1945), it has been extended to include casualties from World War I (1914 &#8211; 1918), Merchant Conflicts, The Korean War (1950 &#8211; 1953), Sanctioned United Nations Missions, The War in Afghanistan (2001 &#8211; 2014), and Incidents involving Police Officers and Emergency Responders.  Geo&#8211;memorials are also used to honour those who have made important contributions to the Province of Saskatchewan.  The initiative honours almost 4000 residents at the present time.</string>
    <string name="about_description_2">Sask. Geo-Memorial is an Android application that people can use to learn more about the Saskatchewan Geo-Memorial Project and about its residents and geo-memorials in particular.  Users can search for residents by name, hometown, birth date, rank, and obit. date and will be shown on a map where their geo-memorials are located.</string>
    <string name="acknowledgments_header">ACKNOWLEDGMENTS</string>
    <string name="acknowledgments_thanks_to">Thanks to:</string>
    <string name="acknowledgments_thanks1">\u2022 Udacity</string>
    <string name="acknowledgments_thanks2">\u2022 Sask. Parks, Culture, and Sport</string>
    <string name="acknowledgments_thanks3">\u2022 Doug Chisholm</string>
    <string name="acknowledgments_tester_1">\u2022 Maria-Lynn Callaghan</string>
    <string name="acknowledgments_tester_2">\u2022 Tracy Creighton</string>
    <string name="acknowledgments_tester_3">\u2022 Catriona Graham</string>
    <string name="acknowledgments_tester_4">\u2022 Tim Schneider</string>
    <string name="acknowledgments_tester_5">\u2022 Doris Staflund</string>
    <string name="acknowledgments_tester_6">\u2022 Greg Wawryk</string>
    <string name="contact_header">CONTACT US</string>
    <string name="contact_invitation">If you have comments or questions, you can contact the developer at the following address:</string>
    <string name="contact_address" translatable="false">darryl.staflund@hushmail.com</string>
    <string name="contact_codebase">To view the source code or any known issues, visit the following link:</string>
    <string name="contact_codebase_url" translatable="false">github.com/dstaflund/Capstone-Project</string>
    <string name="info_header">FURTHER INFORMATION</string>
    <string name="info_blurb">For more information on the Saskatchewan Geo-Memorial Project, please check out the following links:</string>
    <string name="info_url1" translatable="false">\u2022 www.pcs.gov.sk.ca</string>
    <string name="info_url2" translatable="false">\u2022 sasksearch.com</string>
    <string name="info_url3" translatable="false">\u2022 woodlandaerialphoto.com</string>
    <string name="info_url4" translatable="false">\u2022 svwm.ca</string>
    <string name="info_url5" translatable="false">\u2022 legionmagazine.com</string>
    <string name="info_url6" translatable="false">\u2022 esask.uregina.ca/entry/place_names.html</string>
    <string name="info_url7" translatable="false">\u2022 www.reginalibrary.ca/blogs/index.php?blog=7</string>
    <string name="history_header">VERSION HISTORY</string>
    <string name="history_release1">v1.0.10 - Initial Release</string>
    <string name="map_type_label">MAP TYPE</string>
    <string name="map_type_normal"><b>NORMAL</b>\n\nTypical road map.  Roads, some man-made features, and important natural features such as rivers are shown.  Road and feature labels are also visible.\n</string>
    <string name="map_type_terrain"><b>TERRAIN</b>\n\nTopographical data.  The map includes colours, contour lines and labels, and perspective shading.  Some roads and labels are also visible.\n</string>
    <string name="map_type_satellite"><b>SATELLITE</b>\n\nSatellite photograph data.  Road and feature labels are not visible.\n</string>
    <string name="map_type_hybrid"><b>HYBRID</b>\n\nSatellite photograph data with road maps added.  Road and feature labels are also visible.\n</string>
    <string name="search_resident">RESIDENT</string>
    <string name="search_hometown">HOMETOWN</string>
    <string name="search_rank">RANK</string>
    <string name="search_obit">OBIT.</string>
    <string name="search_geomemorial">GEOMEMORIAL</string>
    <string name="search_nts_sheet">NTS SHEET</string>
    <string name="search_coordinate">LAT. / LNG.</string>
    <string name="search.share.content_description">Share Button</string>
    <string name="search.favorite.content_description">Select / Unselect Favorite Button</string>
    <string name="search.place.content_description">Zoom Marker Button</string>
    <string name="drawer_header_title">Sask. Geo-Memorial</string>
    <string name="drawer_header_version" translatable="false">v1.0.10</string>
    <string name="widget_header">On This Day</string>
    <string name="widget_empty_content">There is no one today.  Check back tomorrow.</string>
    <string name="widget_resident">RESIDENT</string>
    <string name="widget_hometown">HOMETOWN</string>
    <string name="widget_rank">RANK</string>
    <string name="widget_obit">OBIT.</string>
    <string name="widget_geomemorial">GEOMEMORIAL</string>
    <string name="search_title">Search Sask Geo-Memorial</string>
    <string name="menu_map_type_normal">Normal</string>
    <string name="menu_map_type_terrain">Terrain</string>
    <string name="menu_map_type_satellite">Satellite</string>
    <string name="menu_map_type_hybrid">Hybrid</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_near_me">Closest Memorial</string>
    <string name="menu_clear_history">Clear Search History</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_about">Help &amp; Feedback</string>
    <string name="toast_map_type_normal">Default map type is now NORMAL</string>
    <string name="toast_map_type_terrain">Default map type is now TERRAIN</string>
    <string name="toast_map_type_satellite">Default map type is now SATELLITE</string>
    <string name="toast_map_type_hybrid">Default map type is now HYBRID</string>
    <string name="toast_search_history_cleared">Search history has been cleared</string>
    <string name="toast_search_results_empty">Search did not find any memorials.</string>
    <string name="toast_search_results_normal">Search found %s memorials.</string>
    <string name="toast_search_results_too_many">Search found too many memorials.  Only the first %s will be shown.</string>
    <string name="string_format_name_pattern" formatted="false">Named After:  %s</string>
    <string name="string_format_coordinate_pattern" formatted="false">%s</string>
    <string name="string_format_nts_sheet_pattern" formatted="false">%s (%s)</string>
    <string name="string_format_lat_lng_pattern" formatted="false">%s / %s</string>
    <string name="string_format_fab_pattern">Replace with your own action</string>
    <string name="intro_label">Sask. Geo-Memorial</string>
    <string name="intro_project_title">The Project</string>
    <string name="intro_project_description">Saskatchewan honours residents who have worked or died in service of the Province by naming geographic landmarks after them</string>
    <string name="intro_app_title">The App</string>
    <string name="intro_app_description">This app gives detailed information on the locations of these landmarks and on the residents they were named after</string>
    <string name="intro_map_title">The Map</string>
    <string name="intro_map_description">See where the geo-memorials are by interacting with the map</string>
    <string name="intro_search_title">Searching</string>
    <string name="intro_search_description">Search geo-memorials by name, location, or resident</string>
    <string name="intro_favorites_title">Favorites</string>
    <string name="intro_favorites_description">Keep a list of your favorite geo-memorials for later viewing</string>
    <string name="intro_share_title">Sharing</string>
    <string name="intro_share_description">Share geo-memorials with colleagues, friends, and family</string>
    <string name="intro_settings_title">Settings</string>
    <string name="intro_settings_description">Customize your preferred map type in Settings</string>
    <string name="intro_widget_title">Widget</string>
    <string name="intro_widget_description">See who died on a given date by looking at the Widget</string>
    <string name="exception_illegal_argument_pattern" formatted="false">Could not parse value:  %s</string>
    <string name="exception_io_exception_pattern" formatted="false">IO Exception:  %s</string>
    <string name="exception_unsupported_operation_pattern" formatted="false">Unsupported Uri:  %s</string>
    <string name="email_dialog_header">"Share this Geo-Memorial!"</string>
    <string name="email_type">text/plain</string>
    <string name="email_subject_pattern">Saskatchewan Geo-Memorial (%1$s)</string>
    <string name="email_body_pattern">%1$s is a Saskatchewan Geo-Memorial named after %2$s whose hometown was %3$s and who died on %4$s.\n\nThe geomemorial can be viewed at the following link:\n\n%5$s</string>
    <string name="email_maps_url_pattern">http://www.google.com/maps/place/%1$s,%2$s/@%3$s,%4$s,13z</string>
    <string name="sign_in_label">Sign In</string>
    <string name="misc_action">Action</string>
    <string name="misc_space_character" translatable="false"><![CDATA[ ]]></string>
    <string name="misc_comma_character" translatable="false">,</string>
    <string name="coordinate_format" translatable="false">#.###</string>
    <string name="navbar_icon.content_description">Application Icon</string>
    <string name="mapview.content_description">Map View</string>
    <string name="favorites.share.content_description">Share Button</string>
    <string name="favorites.favorite.content_description">Select / Unselect Favorite Button</string>
    <string name="favorites.empty">There are no favorites\nat the present time\n\n</string>
    <string name="log.search.too_few">Search returned no memorials.</string>
    <string name="log.search_too_many">Search returned an excessive number of memorials.  Only a subset will be shown.</string>
    <string name="additional">ADDITIONAL</string>
</resources>