<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_preferences_scroll_view"
    style="@style/Theme.Preferences.Fragment.ScrollView">

    <LinearLayout
        android:id="@+id/fragment_preferences_linear_layout"
        style="@style/Theme.Preferences.Fragment.Layout">

        <TextView
            android:id="@+id/fragment_preferences_id"
            android:text="@string/map_type_label"
            style="@style/Theme.Preferences.Fragment.Title"/>

        <RadioGroup
            android:id="@+id/map_type_radio_group"
            style="@style/Theme.Preferences.Fragment.Radio.Group">

            <RadioButton
                android:id="@+id/normal_radio_button"
                android:text="@string/map_type_normal"
                style="@style/Theme.Preferences.Fragment.Radio.Button"/>

            <RadioButton
                android:id="@+id/terrain_radio_button"
                android:text="@string/map_type_terrain"
                style="@style/Theme.Preferences.Fragment.Radio.Button"/>

            <RadioButton
                android:id="@+id/satellite_radio_button"
                android:text="@string/map_type_satellite"
                style="@style/Theme.Preferences.Fragment.Radio.Button"/>

            <RadioButton
                android:id="@+id/hybrid_radio_button"
                android:text="@string/map_type_hybrid"
                style="@style/Theme.Preferences.Fragment.Radio.Button"/>

        </RadioGroup>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
